--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -25,7 +25,7 @@
 
 body {
   background-color: var(--bg-color);
-  display: flex;
+  /* display: flex; */
   flex-flow: column;
   height: 100vh;
   color: var(--font-color);
