--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -10,7 +10,7 @@
   --font-code: "Roboto", monospace;
   --bg-color: #bebebe;
   --bg-color-transparent: #cdcdcd;
-  --font-color: #4ccea7;
+  --font-color: #000000;
   --btn-bg-color: #5fa5e6;
   --accent-color: #5469d3;
   --header-shadow: var(--accent-color) 0px 0px 5px;
