--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -36,6 +36,8 @@ main {
   flex-direction: column;
   gap: 32px;
   padding: 56px;
+  padding-left: 24px;
+  padding-right: 24px;
   margin-left: 200px;
 }
 
