--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -34,6 +34,7 @@ body {
 .top-bar {
   display: flex;
   gap: 16px;
+  align-items: center;
 }
 
 main {
@@ -72,7 +73,8 @@ header .container {
 .menu {
   display: flex;
   gap: 2rem;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: flex-end;
   flex-grow: 1;
 }
 
