--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -35,6 +35,7 @@ body {
   display: flex;
   gap: 16px;
   align-items: center;
+  padding: 16px;
 }
 
 main {
@@ -343,9 +344,11 @@ section {
   max-width: 250px;
   min-width:120px; */
 
-  /* position: absolute; */
+  position: fixed; 
   top: 90px;
-  left: 5rem;
+  left: 56px;
+  height: 600px;
+  width: 20%;
   z-index: -1;
 }
 
