--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -45,7 +45,8 @@ main {
   padding: 56px;
   padding-left: 24px;
   padding-right: 24px;
-  margin-left: 200px;
+  margin-left: calc(20% + 16px);
+
 }
 
 .container {
@@ -349,7 +350,7 @@ section {
   left: 56px;
   height: 600px;
   width: 20%;
-  z-index: -1;
+  
 }
 
 .splide__slide {
