change bg color of card

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,10 +8,10 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #bebebe;
+  --bg-color: #e4ddd2;
   --bg-color-transparent: #cdcdcd;
   --font-color: #000000;
-  --btn-bg-color: #5fa5e6;
+  --btn-bg-color: #738156;
   --accent-color: rgb(54, 74, 77);
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
