change bg color of card

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -11,7 +11,7 @@
   --bg-color: #e4ddd2;
   --bg-color-transparent: #cdcdcd;
   --font-color: #000000;
-  --btn-bg-color: #738156;
+  --btn-bg-color: #b9c0ab;
   --accent-color: rgb(54, 74, 77);
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
