--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,7 +8,7 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #e4ddd2;
+  --bg-color: #D8d3cd;
   --bg-color-transparent: #cdcdcd;
   --font-color: #000000;
   --btn-bg-color: #b9c0ab;
